# alibabacloud-tablestore-ai-demo

./: .gitignore  README.md
multi-modal-retrieval/: .gitignore  README.md  pyproject.toml
multi-modal-retrieval/docs/: tablestore_sample.ipynb
multi-modal-retrieval/src/: gradio_app.py
